--- a/index.css
+++ b/index.css
@@ -1,18 +1,38 @@
-body{
+/* top nav bar styles */
+html, body{
     background-color: black;
+    min-height: 100vh;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+/*  border-left: 10px solid gray;
+    border-top: 10px solid gray; 
+    */
+
+}
+main {
+    flex: 1; /* Pushes the footer down */
 }
 
-section.page_head {
+header {
     background-color: black;
     overflow: hidden;
+    height: 120px;
 }
 
-.title {
+h1 a {
     text-align: center;
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+h1 a:visited {
     color: white;
 }
 
-.topnav a {
+
+.top_nav a {
     float: left;
     color: #ec1315;
     text-align: center;
@@ -21,20 +41,82 @@ section.page_head {
     font-size: 17px;
 }
   
-/* Change the color of links on hover */
-.topnav a:hover {
+.top_nav a:hover {
     background-color: #ec1315;
     color: black;
 }
   
-  /* Add a color to the active/current link */
-.topnav a.active {
-    background-color: dark gray;
+/* main */
+
+h2 {
+    background-color: gray;
+    text-align: left;
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    padding-left: 20px;
+}
+
+/* table & vendor spotlight: */
+.column {
+    float: left;
+    width: 48.5%;
+    margin-bottom: 20px;
+  }
+
+.column:first-of-type {
+    margin-left: 1.5%;
 }
   
-.navbar {
-    color: #ec1315;
-    overflow: hidden;
-    position: center;
-    bottom: 0;
+    /* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
   }
+
+.column h2 {
+    background-color: black;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.column img {
+    background-color: white;
+    scale: .5;
+}
+
+.column p {
+    color: white;
+    font-size: 15px;
+    padding-left: 100px;
+    padding-right: 100px;
+    text-align: justify;
+}
+
+/* bottom nav bar styles */
+footer {
+    position: relative; /* Ensures it stays within the page flow */
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+    height: 120px;
+    background-color: rgb(30, 26, 26);
+}
+
+.bottom_nav {
+    position: absolute;
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+}
+
+.bottom_nav a {
+    display: inline-block; 
+    color: #ec1315;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
