--- a/index_news.css
+++ b/index_news.css
@@ -2,9 +2,10 @@
     display: flex;
     flex-wrap: nowrap;
     gap: 20px;
-    padding: 20px;
+    padding: 10px 10px 10px 10px;
     overflow-x: auto; 
     scroll-snap-type: x mandatory;
+    margin-left: 20px;
 }
 
 #news-container::-webkit-scrollbar {
@@ -14,7 +15,8 @@
 .news-item {
     position: relative;
     flex: 0 0 auto; 
-    width: 300px;
+    width: 250px;
+    height: 260px;
     border: 1px solid #ddd;
     border-radius: 8px;
     overflow: hidden;
@@ -58,7 +60,6 @@
     bottom: 0px;
     left: 85px;
     color: black;
-    padding: 5px 12px;
     font-size: 0.75em;
     font-weight: bold;
     border-radius: 4px;
@@ -67,12 +68,11 @@
 }
 
 .news-content {
-    padding: 15px;
     text-align: center;
 }
 
 .news-content h3 {
-    font-size: 1.1em;
+    font-size: 0.9em;
     margin-bottom: 10px;
     color: #333;
     font-weight: bold;
