--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ header {
 }
 
 h1 a {
-    text-align: center;
+    text-align: right;
     color: white;
     text-decoration: none;
     font-size: 18px;
