--- a/Styles/index_news.css
+++ b/Styles/index_news.css
@@ -23,6 +23,7 @@
     background: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     scroll-snap-align: start; 
+    transition: transform 0.75s;
 }
 
 .news-item:hover {
